@startuml GarmentModel
    hide empty members

    abstract Garment{
        + <<Property>>name: string
        + <<Property>>price: double
        + <<Property>>size: string
        + <<Property>>brand: string
        + <<Property>>seasons: string[]
        + <<Property>>materials: Material[]
        + <<Property>>notes: string
    }

    class Material{
        colour: Colour
        shade: Shade
        fabric: string
    }

    enum Shade{
        DARK
        BRIGHT
        NEON
        PASTEL
    }

    enum Colour{
        RED
        ORANGE
        YELLOW
        GREEN
        BLUE
        INDIGO
        VIOLET
        BROWN
        BLACK
        WHITE
        PINK
    }
    

    Garment o-right- Material: Aggregation
    Material::Shade -- Shade
    Material::Colour -- Colour

    class Shoe implements Garment
    class Top implements Garment
    class Bottom implements Garment
    class Accessory implements Garment
    class Outerwear implements Garment

@enduml